change readme files

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Tryimagemagick
+Try ImageMagick
 ========================
 
 This application was generated with the rails_apps_composer gem:
@@ -16,4 +16,3 @@ Preferences:
 
 ________________________
 
-License
