--- a/README.textile
+++ b/README.textile
@@ -1,80 +1,29 @@
-h1. Tryimagemagick
+h1. Try ImageMagick
 
-This application was generated with the "rails_apps_composer":https://github.com/RailsApps/rails_apps_composer gem provided by the "RailsApps Project":http://railsapps.github.io/.
+A browser-based command line for the "ImageMagick":http://www.imagemagick.org image editing software suite.
 
-h2. Diagnostics
-
-This application was built with recipes that are known to work together.
-
-This application was built with preferences that are NOT known to work together.
-
-If the application doesn't work as expected, please "report an issue":https://github.com/RailsApps/rails_apps_composer/issues and include these diagnostics:
-
-We'd also like to know if you've found combinations of recipes or preferences that do work together.
-
-Recipes:
-["apps4", "controllers", "core", "email", "extras", "frontend", "gems", "git", "init", "models", "prelaunch", "railsapps", "readme", "routes", "saas", "setup", "testing", "views"]
-
-Preferences:
-{:git=>true, :apps4=>"none", :dev_webserver=>"thin", :prod_webserver=>"thin", :database=>"postgresql", :templates=>"erb", :unit_test=>"rspec", :integration=>"rspec-capybara", :continuous_testing=>"none", :fixtures=>"none", :frontend=>"bootstrap3", :email=>"gmail", :authentication=>"none", :authorization=>"none", :form_builder=>"simple_form", :starter_app=>"home_app", :rvmrc=>true, :quiet_assets=>true, :local_env_file=>true, :better_errors=>true, :jsruntime=>false, :github=>true}
-
-h2. Ruby on Rails
+h2. Requirements
 
 This application requires:
 
 * Ruby version 2.0.0
 * Rails version 4.0.2
 
-Learn more about "Installing Rails":http://railsapps.github.io/installing-rails.html.
-
 h2. Database
 
 This application uses PostgreSQL with ActiveRecord.
 
-h2. Development
-
-* Template Engine: ERB
-* Testing Framework: RSpec
-* Front-end Framework: Twitter Bootstrap 3.0 (Sass)
-* Form Builder: SimpleForm
-* Authentication: None
-* Authorization: None
-
-h2. Email
-
-The application is configured to send email using a Gmail account.
-
-h2. Getting Started
-
-Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-
-h2. Documentation and Support
-
-This is the only documentation.
-
-h4. Issues
-
-Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-
-h2. Similar Projects
-
-Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-
 h2. Contributing
 
-If you make improvements to this application, please share with others.
+Feel free to get involved!
 
 * Fork the project on GitHub.
 * Make your feature addition or bug fix.
 * Commit with Git.
 * Send the author a pull request.
 
-If you add functionality to this application, create an alternative implementation, or build an application that is similar, please contact me and I'll add a note to the README so that others can find your work.
-
 h2. Credits
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+Try ImageMagick was generated with the "rails_apps_composer":https://github.com/RailsApps/rails_apps_composer gem provided by the "RailsApps Project":http://railsapps.github.io/.
 
-h2. License
-
-Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+It also makes use of Ruby gems such as "Simple Form":https://github.com/plataformatec/simple_form and "MojoMagick":https://github.com/rcode5/mojo_magick?source=cc, as well as Twitter Bootstrap for styling.
